fixed style.css issue with connecting to html file by changing path

--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8">
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="reset.css">
+    <!-- <link rel="stylesheet" type="text/css" href="WebVisualizations/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="WebVisualizations/style.css">
+    <link rel="stylesheet" type="text/css" href="WebVisualizations/style.css"> -->
+
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
+
 </head>
 
 
 <body>
 
 
-    <!-- <h1>This is my Home Page header</h1> -->
+    <h1>This is my Home Page header</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <ul>
             <li class="nav-item" >
@@ -40,7 +47,7 @@
 
 
         <div class="row">
-            <h2>This is my Home Page sub header</h2>
+            <h2 id ="subby">This is my Home Page sub header</h2>
         </div>
         
         <div class="row">
