--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -3,16 +3,44 @@
 
 <head>
     <title>Data Page</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+
 </head>
 <body>
-    <h1>This is my Data Page</h1>
 
-    <ul>
-        <a href="index.html"><li>Home Page</li></a>
-        <a href="visualizations.html"><li>Visualizations</li></a>
-        <a href="comparison.html"><li>Comparisons</li></a>
-        <a href="data.html"><li>Data</li></a>
-    </ul>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="index.php">Home</a></li>
+        <li><a href="about.php">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="contact.php">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+
 
 </body>
 
