--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -4,50 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-
-    <!-- <link rel="stylesheet" type="text/css" href="WebVisualizations/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="WebVisualizations/style.css"> -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-
 
 
 </head>
 
 
 <body>
+    <!-- navigation bar -->
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><i
+                    class="fas fa-bars fa-1x"></i></span>
+            </button>
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent1"> -->
+
+                <!-- Links -->
+                <!-- <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                </ul>
+            </div> -->
 
 
-    <h1>This is my Home Page header</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <ul>
-            <li class="nav-item" >
-                <a class="nav-link" href="index.html">Home Page</a>
-            </li>
+            <div class=" navbar" id="navbarSupportedContent">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item" >
+                        <a class="nav-link"  href="index.html">Home Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visualizations.html">Visualizations</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="comparison.html">Comparisons</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="data.html">Data</a>
+                    </li>
+                </ul>
+            </div>    
+        </nav>
 
-            <li class="nav-item">
-                <a class="nav-link" href="visualizations.html">Visualizations</a>
-            </li>
 
-            <li class="nav-item" >
-                <a class="nav-link" href="comparison.html">Comparisons</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="data.html">Data</a>
-            </li>
-
-        </ul>
-    </nav>
 
     <div class="container">
 
+        <div class="row">
+            <h1 >this is my h1 header in a row</h1>
+        </div>
 
         <div class="row">
-            <h2 id ="subby">This is my Home Page sub header</h2>
+            <h2 >This is my Home Page sub header</h2>
         </div>
         
         <div class="row">
@@ -70,7 +87,7 @@
     </div>  
 
 
-    <p>this is a paragraph about my homepage</p>
+    <p>this paragraph is outside of the bootstrap row's and columns structure</p>
 
     
 
