--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -2,46 +2,92 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Data Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
+    <!-- for importing csv as table -->
+    <link rel=”stylesheet” type=”text/css” href=”csvtable.css” title=”style” /> <script type=”text/javascript” src=”js/jquery-1.4.2.min.js”></script> <script type=”text/javascript” src=”js/jquery.csvToTable.js”></script> <script type=”text/javascript” src=”js/jquery.tablesorter.dev.js”></script>
+    <script> $(function() { $.get(‘cities.csv’, function(data) { $(‘#CSVSource’).html(‘<pre>’ + data + ‘</pre>’); }); $(‘#CSVTable’).CSVToTable(‘cities.csv’, { loadingImage: ‘images/loading.gif’, startLine: 0 }); $.get(‘test.tsv’, function(data) { $(‘#TSVSource’).html(‘<pre>’ + data + ‘</pre>’); }); $(‘#TSVTable’).CSVToTable(‘test.tsv’, { loadingText: ‘Loading TSV Data…’, loadingImage: ‘images/loading.gif’, startLine: 0, separator: “\t” }); $(‘#CSVTable2’).CSVToTable(‘cities.csv’, { loadingImage: ‘images/loading.gif’, startLine: 1, headers: [‘City ID’, ‘Artist Name’, ‘Price ($USD)’] }).bind(“loadComplete”,function() { $(‘#CSVTable2’).find(‘TABLE’).tablesorter(); });; }); </script>
 
 </head>
+
+
 <body>
+    <!-- navigation bar -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+            
+            <!-- hamburger button that appears when the screen is smaller -->
+            <button class="nav-link dropdown-toggle bg-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="nav-link"  href="index.html">Home Page</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="visualizations.html">Visualizations</a>
+                <a class="dropdown-item" href="comparison.html">Comparisons</a>
+                <a class="dropdown-item" href="data.html">Data</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+            </div>
 
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+            <!-- list of links to pages that normally appears on larger screen -->
+            <div class=" navbar" id="navbarSupportedContent">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item" >
+                        <a class="nav-link"  href="index.html">Home Page</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="visualizations.html">Visualizations</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="comparison.html">Comparisons</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="data.html">Data</a>
+                    </li>
+                </ul>
+            </div>    
+        </nav>
+   
+
+
+    <div class="container">
+
+        <div class="row">
+          <div class="table-responsive-sm">
+            <table class="table">
+              one, two, three
+              one, two, three
+              one, two, three
+              one, two, three
+              one, two, three
+            </table>
+          </div>
+        </div>
+
+    
+
+
+    </div>  
+   
+    <div id="CSVSource">
+    </div>
+    <div id="CSVTable">
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.php">Home</a></li>
-        <li><a href="about.php">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="contact.php">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
+    <p>this paragraph is outside of the bootstrap row's and columns structure</p>
 
 
-
-
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+   
 </body>
 
 </html>
