created visualization pages and updated navigation bar

--- a/WebVisualizations/WindSpeed.html
+++ b/WebVisualizations/WindSpeed.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Wind Speed</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -76,26 +76,8 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
-                <p > I'll put a general description of the project here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque ligula in nunc cursus aliquam. Sed bibendum ultricies tempor. Cras ipsum urna, commodo a volutpat et, suscipit at quam. Vestibulum consequat ac dui nec accumsan. Vestibulum feugiat tempus tristique. Suspendisse tempus nisi eget est blandit iaculis. Quisque efficitur eget sem et condimentum. Mauris facilisis vel nisi ac consectetur. Cras velit mi, viverra non rhoncus fermentum, tincidunt ut magna. Suspendisse eu feugiat justo, eu iaculis risus. Vestibulum accumsan ex ac porttitor tristique. Vestibulum commodo mollis nisl non ornare. Pellentesque tellus lacus, condimentum at mi at, maximus congue lacus. Curabitur fringilla diam id bibendum rutrum. Aenean eget tortor sed eros faucibus suscipit.</p>
-            </div>
-        </div>
-        
-        <div class="row">
-            <p>this is a paragraph in a row</p>
-        </div>
-
-        <div class="row">
             <div class = "col">
-                <div class="alert alert-primary" role="alert">
-                    <ul >
-                        <li>test list 1</li>
-                        <li>test list 1</li>
-                        <li>test list 1</li>
-                        <li>test list 1</li>
-                        <li>test list 1</li>
-                    </ul>
-                </div>
+  
             </div>
         </div>
     </div>  
