--- a/WebVisualizations/comparison.html
+++ b/WebVisualizations/comparison.html
@@ -2,18 +2,103 @@
 <html lang="en">
 
 <head>
-    <title>Comparisons Page</title>
+    <meta charset="UTF-8">
+    <title>Comparisons</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+
 </head>
+
+
 <body>
-    <h1>This is my Comparisons Page</h1>
+    <!-- navigation bar -->
 
-    <ul>
-        <a href="index.html"><li>Home Page</li></a>
-        <a href="visualizations.html"><li>Visualizations</li></a>
-        <a href="comparison.html"><li>Comparisons</li></a>
-        <a href="data.html"><li>Data</li></a>
-    </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+            
+        <!-- hamburger button that appears when the screen is smaller -->
+        <button class="nav-link dropdown-toggle bg-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
+
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link"  href="index.html">Home Page</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="comparison.html">Comparisons</a>
+            <a class="dropdown-item" href="data.html">Data</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="MaxTemp.html">Max Temp Visual</a>
+            <a class="dropdown-item" href="Humidity.html">Humidity Visual</a>
+            <a class="dropdown-item" href="Cloudiness.html">Cloudiness Visual</a>
+            <a class="dropdown-item" href="WindSpeed.html">Wind Speed Visual</a>
+        </div>
+
+
+        <!-- list of links to pages that normally appears on larger screen -->
+        <div class=" navbar" id="navbarSupportedContent">
+            <ul class="nav navbar-nav">
+                <li class="nav-item" >
+                    <a class="nav-link"  href="index.html">Home Page</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="comparison.html">Comparisons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="data.html">Data</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Visualizations
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="MaxTemp.html">Max Temp Visual</a>
+                      <a class="dropdown-item" href="Humidity.html">Humidity Visual</a>
+                      <a class="dropdown-item" href="Cloudiness.html">Cloudiness Visual</a>
+                      <a class="dropdown-item" href="WindSpeed.html">Wind Speed Visual</a>
+                    </div>
+                </li>                    
+            </ul>
+        </div>    
+    </nav>
+    <!-- navigation bar end -->
+   
+
+
+    <div class="container" id="comparisoncont">
+        <div class="row">
+            <div class="col-lg-12 center-block text-center">
+                <h1>Comparison: Latitude vs X</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h2>Max Temperature</h2>
+                <img src="Resources/assets/images/Fig1.png" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+                <h2>Humidity</h2>
+                <img src="Resources/assets/images/Fig2.png" class="img-fluid">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h2>Cloudiness</h2>
+                <img src="Resources/assets/images/Fig3.png" class="img-fluid">
+            </div>
+            <div class="col-lg-6">
+                <h2>Wind Speed</h2>
+                <img src="Resources/assets/images/Fig4.png" class="img-fluid">
+            </div>
+        </div>
+    </div>  
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+   
 </body>
 
 </html>
