--- a/WebVisualizations/WindSpeed.html
+++ b/WebVisualizations/WindSpeed.html
@@ -71,13 +71,14 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h1 >this is my h1 header in a row</h1>
+                <h1 >Wind Speed</h1>
             </div>
         </div>
 
         <div class="row">
-            <div class = "col">
-  
+            <div class = "col-md-12">
+                <img src="Resources/assets/images/Fig4.png" class="img-fluid">
+                <p>this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. </p>
             </div>
         </div>
     </div>  
