update to the data page

--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -70,6 +70,12 @@
     <!-- container for the rows and columns that'll include our data -->
     <div class="container">
         <div class="row">
+          <div class="col-md-12">
+            <h1>Data</h1>
+            <p>This following table includes all of the data used for plotting during this project</p>
+          </div>
+        </div>
+        <div class="row">
           <div class="table-responsive-sm">
             <table id="citytable" class="table">
               <thead>
