updated descriptions and cleaned code

--- a/WebVisualizations/Cloudiness.html
+++ b/WebVisualizations/Cloudiness.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class = "col-md-12">
                 <img src="Resources/assets/images/Fig3.png" class="img-fluid">
-                <p>this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. </p>
+                <p>As you can probably tell from the distribution of points on the graph, cloudiness and latitude are not correlated. This is confirmed when we consider the R value of the southern hemisphere is .28 and the northern hemisphere is .24. </p>
             </div>
         </div>
     </div>  
