--- a/WebVisualizations/Humidity.html
+++ b/WebVisualizations/Humidity.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class = "col-md-12">
                 <img src="Resources/assets/images/Fig2.png" class="img-fluid">
-                <p>this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. </p>
+                <p>Based on the distribution of points on this graph, we can assume that humidity and latitude are not strongly correlated. This assumption is confirmed knowing the R value for the northern hemisphere is .32 and the southern hemisphere is .083. This was somewhat surprising. I initially thought humid places near the equator, like the rain forest, would result in the general humidity increasing as you approached the equator. However, I think I forgot to consider deserts near the equator, like the Sahara. </p>
             </div>
         </div>
     </div>  
