--- a/WebVisualizations/comparison.html
+++ b/WebVisualizations/comparison.html
@@ -74,23 +74,28 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-lg-12 center-block text-center">
+                <p>Click any plot for more details</p>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-6">
                 <h2>Max Temperature</h2>
-                <img src="Resources/assets/images/Fig1.png" class="img-fluid">
+                <a href="MaxTemp.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid"></a>
             </div>
             <div class="col-lg-6">
                 <h2>Humidity</h2>
-                <img src="Resources/assets/images/Fig2.png" class="img-fluid">
+                <a href="Humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid"></a>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
                 <h2>Cloudiness</h2>
-                <img src="Resources/assets/images/Fig3.png" class="img-fluid">
+                <a href="Cloudiness.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid"></a>
             </div>
             <div class="col-lg-6">
                 <h2>Wind Speed</h2>
-                <img src="Resources/assets/images/Fig4.png" class="img-fluid">
+                <a href="WindSpeed.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid"></a>
             </div>
         </div>
     </div>  
