--- a/WebVisualizations/MaxTemp.html
+++ b/WebVisualizations/MaxTemp.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class = "col-md-12">
                 <img src="Resources/assets/images/Fig1.png" class="img-fluid">
-                <p>this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. </p>
+                <p>This graph confirms the natural assumption that it becomes warmer as you approach the equator. However, I did not assume that the northern hemisphere would be colder than the southern hemisphere. Based on this observation, I assume this data was gathered during the southern hemisphere’s summer season. </p>
             </div>
         </div>
     </div>  
