--- a/WebVisualizations/WindSpeed.html
+++ b/WebVisualizations/WindSpeed.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class = "col-md-12">
                 <img src="Resources/assets/images/Fig4.png" class="img-fluid">
-                <p>this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. this is a bunch of text describing  the plot. </p>
+                <p>As you can probably tell from the distribution of points on the graph, wind speed and latitude are not correlated. This is confirmed when we consider the R value of the southern hemisphere is .16 and the northern hemisphere is .15. </p>
             </div>
         </div>
     </div>  
